[package]
name = "weather-cli"
version = "0.1.0"
authors = ["Jori <jvalkenhoff@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
exitfailure = "0.5.1"
reqwest = {version = "0.11.3", features=["json"] }
serde = "1.0.126"
serde_json = "1.0"
serde_derive = "1.0.126"
tokio = { version = "1", features = ["full"] }